Added all data from old webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,255 @@
-BLERG!
+<html>
+
+<link rel='stylesheet' href='page.css' type='text/css' />
+
+
+<head>
+<title>Robby McKilliam's Webpage</title>
+</head>
+
+<body>
+
+<h1>Robby McKilliam's Webpage</h1>
+
+<b>Biography</b>
+<table cellpadding="0" cellspacing="0" width="800">
+	<!-- MSTableType="layout" -->
+	<tr>
+		<td valign="top" width="380"><span class="nfakPe">
+Robby McKilliam is currently working at the Institute for Telecommunications Research at the University of South Australia, Adelaide.  His fields of interest are lattice theory, number theory, estimation theory and signal processing and communications.  In December 2010 he completed his PhD at the University of Queensland, Brisbane, Australia. In 2006 he completed his undergraduate studies in computer systems engineering and mathematics at the University of Queensland. In 2007, he received the Maude Walker scholarship from the school of information technology and electrical engineering at the University of Queensland and in 2010 he received a best paper award from the Canon Information Systems Research Australia (CiSRA). Robby's recreational interests are: swimming, skiing, math, motorbikes, videogames and coffee.
+		<!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
+		<p> <b>Address</b>
+		<br> Institute for Telecommunications Research
+		<br> Building W, University of South Australia, 
+		<br> Mawson Lakes, SA, Australia, 5095 </p>
+		<p> <b>Email</b> robby.mckilliam_at_unisa.edu.au</p>
+		<p>&nbsp;</td>
+		<td width="15">&nbsp;</td>
+		<td valign="top" width="432">
+		<!--<img border="0" src="profilepic.jpg" width="228" height="352"></td>-->
+		<img border="0" src="profile2.jpg" width="192" height="271"></td>
+	</tr>
+</table>
+<br>
+
+<b>Thesis </b>
+<table cellpadding="4" cellspacing="0" width="600" >
+	<tr valign="top">
+		<td>
+		R.&nbsp;G. McKilliam.
+  <em>Lattice theory, circular statistics and polynomial phase
+  signals</em>.
+  PhD thesis, University of Queensland, Australia, December 2010.<br />
+[ <a href="./robby_bib.html#McKilliam2010thesis">bib</a> | <a href="papers/thesis.pdf">pdf</a> ] <br>
+	</td>
+	</tr>
+</table>
+<br>
+<b>Journal Papers </b>
+<table cellpadding="4" cellspacing="0" width="600" >
+	<tr valign="top">
+		<td>
+		R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
+  		An algorithm to compute the nearest point in the lattice <em>A</em><sub>n</sub><sup>*</sup>.
+  		<em>IEEE Trans. Inform. Theory</em>, 54(9):4378-4381, Sep. 2008.<br />
+		[ <a href="./robby_bib.html#McKilliam2008">bib</a> 
+		| <a href="http://dx.doi.org/10.1109/TIT.2008.928280">DOI</a>
+		| <a href="http://arxiv.org/abs/0801.1364">arxiv</a> ]
+	</td>
+	</tr>
+	<tr valign="top">
+		<td>
+		R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
+		Identifiability and aliasing in polynomial-phase signals.
+		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.<br />
+		<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br />
+		[ <a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a> |
+		<a href="papers/identifiabilityPPS.pdf">.pdf</a>]
+		
+		</td>
+	</tr>
+	
+	<tr valign="top">
+		<td>
+		R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
+		  Linear-time nearest point algorithms for Coxeter lattices.
+		  <em>IEEE Trans. Inform. Theory</em>, 56(3):1015-1022, Mar. 2010.<br />
+		[ <a href="./robby_bib.html#McKilliam2009CoxeterLattices">bib</a> 
+		| <a href="http://dx.doi.org/10.1109/TIT.2009.2039090">DOI</a> 
+		| <a href="http://arxiv.org/abs/0903.0673">arxiv</a>]
+		</td>
+	</tr>
+	
+	<tr valign="top">
+		<td>
+		R.&nbsp;G. McKilliam, Barry&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and Bill Moran.
+		  Frequency estimation by phase unwrapping.
+		  <em>IEEE Trans. Signal Process.</em>, 58(6):2953-2963, June 2010.</br>
+		[ <a href="./robby_bib.html#McKilliamFrequencyEstimationByPhaseUnwrapping2009">bib</a> | 
+		  <a href="http://dx.doi.org/10.1109/TSP.2010.2045786">DOI</a>&nbsp;]
+		</td>
+	</tr>
+
+	<tr valign="top">
+	<td>
+	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
+	 Direction estimation by minimum squared arc length.
+	 submitted to <em>IEEE Trans. Signal Process.</em>, Mar. 2011.<br />
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;]
+
+	</td>
+	</tr>
+
+</table>
+<br>
+<b>Conference Papers </b>
+<table cellpadding="4" cellspacing="0" width="600" >
+
+	<tr valign="top">
+	<td>
+	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
+	 The asymptotic properties of polynomial phase estimation by least
+	  squares phase unwrapping.
+	 accepted to <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, 2011.<br />
+	[&nbsp;<a href="robby_bib.html#McKilliam_polyphase_est_icassp_2011">bib</a>&nbsp;]
+
+	</td>
+	</tr>
+
+
+	<tr valign="top">
+	<td>
+	R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
+	 Block noncoherent detection of hexagonal QAM.
+	 <em>in Proc. Australian Commun. Theory Workshop</em>, pages 65-70, Feb. 2010.<br />
+	[&nbsp;<a href="robby_bib.html#McKilliam2010_block_noncoherent_hex">bib</a>&nbsp;]
+
+	</td>
+	</tr>
+
+	<tr valign="top">
+	<td>
+	R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, Barry&nbsp;G. Quinn, and Bill Moran.
+	  Polynomial-phase estimation, phase unwrapping and the nearest lattice
+	  point problem.
+	  accepted for <em>Asilomar Conference on Signals, Systems, and
+	  Computers</em>, 2009.<br />
+	[ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| 
+	<a href="http://www.itee.uq.edu.au/~robertm/papers/asilomar_polyphase_est.pdf">.pdf</a>&nbsp;]	
+	</td>
+	</tr>
+
+	<tr valign="top">
+	<td>
+	R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B.
+	  Collings.
+	 Linear-time block noncoherent detection of PSK. <em>Proc. Internat. Conf. 
+		Acoust. Speech Signal Process.</em>,
+	 pages 2465-2468, April 2009. <br />
+	[&nbsp;<a href="robby_bib.html#4960121">bib</a>&nbsp;| 
+	<a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">DOI</a>&nbsp;| 
+	<a href="http://www.itee.uq.edu.au/~robertm/papers/ICASSP_linear_time_psk_2009.pdf">.pdf</a>&nbsp;]
+	</td>
+	</tr>
+
+
+	<tr valign="top">
+		<td>R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson. Maximum-likelihood period 
+		estimation from sparse, noisy timing data. <em>Proc. Internat. Conf. 
+		Acoust. Speech Signal Process.</em>, pages 3697-3700, March 2008.<br />
+		[ <a href="robby_bib.html#McKilliam2007">bib</a> |
+		<a href="papers/ICASSP_SNPE.pdf">.pdf</a>]
+    
+	</td>
+	</tr>
+
+	<tr valign="top">
+		<td>R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings. 
+		An improved algorithm for optimal noncoherent QAM detection. <em>Proc. 
+		Austral. Comm. Theory Workshop</em>, pages 64-68, Jan 2008.<br>
+		[ <a href="robby_bib.html#McKilliam2008a">bib</a> |
+		<a href="papers/qamreceiver.pdf">.pdf</a> ]
+
+		</td>
+	</tr>
+  
+  <tr valign="top">
+<td>
+R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W. D. Smith and B.&nbsp;G. Quinn.
+  A linear-time nearest point algorithm for the lattice <em>A</em><sub>n</sub><sup>*</sup>. <em>International Symposium on Information Theory
+  and its Applications</em>, 2008.<br />
+[ <a href="./robby_bib.html#McKilliam2008b">bib</a> |
+<a href="papers/ISITA_Anstar.pdf">.pdf</a>]
+
+</td>
+</tr>
+  
+    <tr valign="top">
+    <td>
+B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
+  Maximizing the periodogram.
+  <em>IEEE GLOBECOM</em>, pages 1-5, Dec 2008.<br />
+[ <a href="./robby_bib.html#Quinn2008maximizing_the_periodogram">bib</a> | 
+<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4698443">http</a> ]
+
+    </td>
+    </tr>
+  
+
+	<tr valign="top">
+		<td>R.&nbsp;McKilliam and G.&nbsp;Wyeth. Fast and robust stereo object recognition 
+		for spheres. <em>Proc. Australasian Conference on Robotics and 
+		Automation</em>, 2006.<br>
+		[ <a href="robby_bib.html#McKilliam2006">bib</a> |
+		<a href="http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf">.pdf</a> 
+		]
+
+		</td>
+	</tr>
+</table>
+
+<br>
+<b>Software</b>
+<table cellpadding="4" cellspacing="0" width="600">
+<tr valign="top"><td>
+Software for running simulations related to the papers above (and more!) is available on 
+<a href="https://github.com/harprobey/pubsim">github</a>. This software is released under the
+<a href="http://matt.might.net/articles/crapl/">CRAPL</a> and comes with no guarantee as to legibility, coding style or anything else.</td></tr>
+</table>
+
+<br>
+<b>Colleagues</b>
+<table>
+<tr valign="top"><td><a href="http://www.itee.uq.edu.au/~vaughan/Home.html">Vaughan Clarkson</a> </td></tr>
+<tr valign="top"><td><a href="http://www.stat.mq.edu.au/our_staff/staff_-_alphabetical/staff1/barry_quinn">Barry Quinn</a> </td></tr>
+<tr valign="top"><td><a href="http://www.ict.csiro.au/staff/Iain.Collings/">Iain Collings</a> </td></tr>
+<tr valign="top"><td><a href="http://www.iet.ntnu.no/~danryan/">Dan Ryan</a> </td></tr>
+<tr valign="top"><td><a href="http://www.findanexpert.unimelb.edu.au/researcher/person7913.html">Bill Moran</a> </td></tr>
+</table>
+
+<br>
+<b>Reviewing</b>
+<table>
+<tr valign="top"><td><a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=18">IEEE Transactions on Information Theory</a></td></tr>
+<tr valign="top"><td><a href="http://www.signalprocessingsociety.org/publications/periodicals/tsp/">IEEE Transactions on Signal Processing</a></td></tr>
+<tr valign="top"><td><a href="http://www.signalprocessingsociety.org/publications/periodicals/letters/">IEEE Signal Processing Letters</a></td></tr>
+<tr valign="top"><td><a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=35">IEEE Communications Magazine</a></td></tr>
+<tr valign="top"><td>IEEE International Conference on Communications (ICC)</td></tr>
+<tr valign="top"><td>IEEE Vehicular Technology Conference (VTC)</td></tr>
+<tr valign="top"><td>Conference of the IEEE Industrial Electronics Society (IECON)</td></tr>
+<tr valign="top"><td>Australian Communications Theory Workshop (AusCTW)</td></tr>
+<tr valign="top"><td><a href="http://www.ams.org/mr-database">Mathematical Reviews</a></td></tr>
+</table>
+
+<br>
+<b>Other Activities</b>
+<table>
+<tr valign="top"><td>Chair of the IEEE University of Queensland Student Branch 2009</td></tr>
+<!--<tr valign="top"><td>Robby manages two open source software projects.&nbsp;
+<a href="http://rubyforge.org/projects/rubypost/">Rubypost</a> and
+<a href="http://sourceforge.net/projects/jdraftpdf">JDraftPDF</td></tr>-->
+</table>
+
+</body>
+
+</html>
