Fixed error in code page link.

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 <table cellpadding="4" cellspacing="0" width="600">
 <tr valign="top"><td>
 Software for running simulations related to the papers above (and more!) is available on 
-<a href="https://github.com/harprobey/pubsim">github</a>. This software is released under the
+<a href="https://github.com/robbymckilliam/pubsim">github</a>. This software is released under the
 <a href="http://matt.might.net/articles/crapl/">CRAPL</a> and comes with no guarantee as to legibility, coding style or anything else.</td></tr>
 </table>
 
