Added to index.

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@ Software for running simulations related to the papers above (and more!) is avai
 <tr valign="top"><td><a href="http://www.findanexpert.unimelb.edu.au/researcher/person7913.html">Bill Moran</a> </td></tr>
 </table>
 
+<!--
 <br>
 <b>Reviewing</b>
 <table>
@@ -240,10 +241,12 @@ Software for running simulations related to the papers above (and more!) is avai
 <tr valign="top"><td>Australian Communications Theory Workshop (AusCTW)</td></tr>
 <tr valign="top"><td><a href="http://www.ams.org/mr-database">Mathematical Reviews</a></td></tr>
 </table>
+-->
 
 <br>
 <b>Other Activities</b>
 <table>
+<tr valign="top"><td>Publications Co-Chair, Defense Applications of Signal Processing Workshop (DASP), 2011</td></tr>
 <tr valign="top"><td>Chair of the IEEE University of Queensland Student Branch 2009</td></tr>
 <!--<tr valign="top"><td>Robby manages two open source software projects.&nbsp;
 <a href="http://rubyforge.org/projects/rubypost/">Rubypost</a> and
