Added to webpage.

--- a/index.html
+++ b/index.html
@@ -103,75 +103,95 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 </table>
 <br>
 <b>Conference Papers </b>
+
+
 <table cellpadding="4" cellspacing="0" width="600" >
 
-	<tr valign="top">
-	<td>
-	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
-	 The asymptotic properties of polynomial phase estimation by least
-	  squares phase unwrapping.
-	 accepted to <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, 2011.<br />
-	[&nbsp;<a href="robby_bib.html#McKilliam_polyphase_est_icassp_2011">bib</a>&nbsp;]
-
-	</td>
-	</tr>
+  <tr valign="top">
+    <td>
+      R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
+      Estimating the circular mean from correlated observations.
+      In <em>Defence App. Sig. Proc.</em>, July 2011.
+      [&nbsp;<a href="robby_bib.html#McKilliam_direstcro_dasp_2011">bib</a>&nbsp;| 
+      <a href="papers/circmeancorr.pdf">.pdf</a>&nbsp;]
+  </tr>
 
 
-	<tr valign="top">
-	<td>
-	R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
-	 Block noncoherent detection of hexagonal QAM.
-	 <em>in Proc. Australian Commun. Theory Workshop</em>, pages 65-70, Feb. 2010.<br />
-	[&nbsp;<a href="robby_bib.html#McKilliam2010_block_noncoherent_hex">bib</a>&nbsp;]
+  <tr valign="top">
+    <td>
+      B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
+      Estimating period from sparse, noisy timing data.
+      In <em>Defence App. Sig. Proc.</em>, July 2011.
+      [&nbsp;<a href="robby_bib.html#Quinn_snpe_dasp_2011">bib</a>&nbsp;]
+    </td>
+  </tr>
+  <tr valign="top">
+    <td>
+      R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
+      The asymptotic properties of polynomial phase estimation by least
+      squares phase unwrapping.
+      accepted to <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, 2011.<br />
+      [&nbsp;<a href="robby_bib.html#McKilliam_polyphase_est_icassp_2011">bib</a>&nbsp;]
 
-	</td>
-	</tr>
-
-	<tr valign="top">
-	<td>
-	R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, Barry&nbsp;G. Quinn, and Bill Moran.
-	  Polynomial-phase estimation, phase unwrapping and the nearest lattice
-	  point problem.
-	  accepted for <em>Asilomar Conference on Signals, Systems, and
-	  Computers</em>, 2009.<br />
-	[ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| 
-	<a href="http://www.itee.uq.edu.au/~robertm/papers/asilomar_polyphase_est.pdf">.pdf</a>&nbsp;]	
-	</td>
-	</tr>
-
-	<tr valign="top">
-	<td>
-	R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B.
-	  Collings.
-	 Linear-time block noncoherent detection of PSK. <em>Proc. Internat. Conf. 
-		Acoust. Speech Signal Process.</em>,
-	 pages 2465-2468, April 2009. <br />
-	[&nbsp;<a href="robby_bib.html#4960121">bib</a>&nbsp;| 
-	<a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">DOI</a>&nbsp;| 
-	<a href="http://www.itee.uq.edu.au/~robertm/papers/ICASSP_linear_time_psk_2009.pdf">.pdf</a>&nbsp;]
-	</td>
-	</tr>
+    </td>
+  </tr>
 
 
-	<tr valign="top">
-		<td>R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson. Maximum-likelihood period 
-		estimation from sparse, noisy timing data. <em>Proc. Internat. Conf. 
-		Acoust. Speech Signal Process.</em>, pages 3697-3700, March 2008.<br />
-		[ <a href="robby_bib.html#McKilliam2007">bib</a> |
-		<a href="papers/ICASSP_SNPE.pdf">.pdf</a>]
-    
-	</td>
-	</tr>
+  <tr valign="top">
+    <td>
+      R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
+      Block noncoherent detection of hexagonal QAM.
+      <em>in Proc. Australian Commun. Theory Workshop</em>, pages 65-70, Feb. 2010.<br />
+      [&nbsp;<a href="robby_bib.html#McKilliam2010_block_noncoherent_hex">bib</a>&nbsp;]
 
-	<tr valign="top">
-		<td>R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings. 
-		An improved algorithm for optimal noncoherent QAM detection. <em>Proc. 
-		Austral. Comm. Theory Workshop</em>, pages 64-68, Jan 2008.<br>
-		[ <a href="robby_bib.html#McKilliam2008a">bib</a> |
-		<a href="papers/qamreceiver.pdf">.pdf</a> ]
+    </td>
+  </tr>
 
-		</td>
-	</tr>
+  <tr valign="top">
+    <td>
+      R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, Barry&nbsp;G. Quinn, and Bill Moran.
+      Polynomial-phase estimation, phase unwrapping and the nearest lattice
+      point problem.
+      accepted for <em>Asilomar Conference on Signals, Systems, and
+	Computers</em>, 2009.<br />
+      [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| 
+      <a href="papers/asilomar_polyphase_est.pdf">.pdf</a>&nbsp;]	
+    </td>
+  </tr>
+
+  <tr valign="top">
+    <td>
+      R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B.
+      Collings.
+      Linear-time block noncoherent detection of PSK. <em>Proc. Internat. Conf. 
+	Acoust. Speech Signal Process.</em>,
+      pages 2465-2468, April 2009. <br />
+      [&nbsp;<a href="robby_bib.html#4960121">bib</a>&nbsp;| 
+      <a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">DOI</a>&nbsp;| 
+      <a href="papers/ICASSP_linear_time_psk_2009.pdf">.pdf</a>&nbsp;]
+    </td>
+  </tr>
+
+
+  <tr valign="top">
+    <td>R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson. Maximum-likelihood period 
+      estimation from sparse, noisy timing data. <em>Proc. Internat. Conf. 
+	Acoust. Speech Signal Process.</em>, pages 3697-3700, March 2008.<br />
+      [ <a href="robby_bib.html#McKilliam2007">bib</a> |
+      <a href="papers/ICASSP_SNPE.pdf">.pdf</a>]
+      
+    </td>
+  </tr>
+
+  <tr valign="top">
+    <td>R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings. 
+      An improved algorithm for optimal noncoherent QAM detection. <em>Proc. 
+	Austral. Comm. Theory Workshop</em>, pages 64-68, Jan 2008.<br>
+      [ <a href="robby_bib.html#McKilliam2008a">bib</a> |
+      <a href="papers/qamreceiver.pdf">.pdf</a> ]
+
+    </td>
+  </tr>
   
   <tr valign="top">
 <td>
