--- a/robby_bib.html
+++ b/robby_bib.html
@@ -20,10 +20,30 @@
 <a name="McKilliam_mean_dir_est_sq_arc_length2010"></a><pre>
 @unpublished{<a href="robby.html#McKilliam_mean_dir_est_sq_arc_length2010">McKilliam_mean_dir_est_sq_arc_length2010</a>,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
-  title = {Direction estimation by minimum square arc length},
+  title = {Direction estimation by minimum squared arc length},
   note = {submitted to IEEE Trans. Sig. Proc.},
   year = 2011,
   month = {Mar.}
+}
+</pre>
+
+<a name="Quinn_snpe_dasp_2011"></a><pre>
+@inproceedings{<a href="robby.html#Quinn_snpe_dasp_2011">Quinn_snpe_dasp_2011</a>,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  title = {Estimating period from sparse, noisy timing data},
+  year = 2011,
+  booktitle = {Defence App. Sig. Proc.},
+  month = {July}
+}
+</pre>
+
+<a name="McKilliam_direstcro_dasp_2011"></a><pre>
+@inproceedings{<a href="robby.html#McKilliam_direstcro_dasp_2011">McKilliam_direstcro_dasp_2011</a>,
+  author = {R. G. McKilliam and B. G. Quinn},
+  title = {Estimating the circular mean from correlated observations},
+  year = 2011,
+  booktitle = {Defence App. Sig. Proc.},
+  month = {July}
 }
 </pre>
 
@@ -100,6 +120,7 @@
   author = {R. G. McKilliam and D. J. Ryan and I. V. L. Clarkson and I. B. Collings},
   title = {Block Noncoherent Detection of Hexagonal {QAM}},
   journal = {in Proc. Australian Commun. Theory Workshop},
+  pages = {65-70},
   year = 2010,
   month = {Feb.}
 }
