added to webpage

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 
 <table cellpadding="4" cellspacing="0" width="600" >
 
-  <tr valign="top">
+  <!-- <tr valign="top">
     <td>
       R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
       Estimating the circular mean from correlated observations.
@@ -124,7 +124,8 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       In <em>Defence App. Sig. Proc.</em>, July 2011.
       [&nbsp;<a href="robby_bib.html#Quinn_snpe_dasp_2011">bib</a>&nbsp;]
     </td>
-  </tr>
+  </tr> -->
+
   <tr valign="top">
     <td>
       R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
