Added frequency estimation repository to webpage.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
   		An algorithm to compute the nearest point in the lattice <em>A</em><sub>n</sub><sup>*</sup>.
   		<em>IEEE Trans. Inform. Theory</em>, 54(9):4378-4381, Sep. 2008.<br />
 		[ <a href="./robby_bib.html#McKilliam2008">bib</a> 
-		| <a href="http://dx.doi.org/10.1109/TIT.2008.928280">DOI</a>
+		| <a href="http://dx.doi.org/10.1109/TIT.2008.928280">doi</a>
 		| <a href="http://arxiv.org/abs/0801.1364">arxiv</a> ]
 	</td>
 	</tr>
@@ -75,7 +75,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 		  Linear-time nearest point algorithms for Coxeter lattices.
 		  <em>IEEE Trans. Inform. Theory</em>, 56(3):1015-1022, Mar. 2010.<br />
 		[ <a href="./robby_bib.html#McKilliam2009CoxeterLattices">bib</a> 
-		| <a href="http://dx.doi.org/10.1109/TIT.2009.2039090">DOI</a> 
+		| <a href="http://dx.doi.org/10.1109/TIT.2009.2039090">doi</a> 
 		| <a href="http://arxiv.org/abs/0903.0673">arxiv</a>]
 		</td>
 	</tr>
@@ -86,7 +86,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 		  Frequency estimation by phase unwrapping.
 		  <em>IEEE Trans. Signal Process.</em>, 58(6):2953-2963, June 2010.</br>
 		[ <a href="./robby_bib.html#McKilliamFrequencyEstimationByPhaseUnwrapping2009">bib</a> | 
-		  <a href="http://dx.doi.org/10.1109/TSP.2010.2045786">DOI</a>&nbsp;]
+		  <a href="http://dx.doi.org/10.1109/TSP.2010.2045786">doi</a> | <a href="http://github.com/robbymckilliam/frequency_estimation_by_phase_unwrapping">code</a>&nbsp;]
 		</td>
 	</tr>
 
@@ -168,7 +168,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 	Acoust. Speech Signal Process.</em>,
       pages 2465-2468, April 2009. <br />
       [&nbsp;<a href="robby_bib.html#4960121">bib</a>&nbsp;| 
-      <a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">DOI</a>&nbsp;| 
+      <a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">doi</a>&nbsp;| 
       <a href="papers/ICASSP_linear_time_psk_2009.pdf">.pdf</a>&nbsp;]
     </td>
   </tr>
@@ -235,7 +235,8 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 <tr valign="top"><td>
 Software for running simulations related to the papers above (and more!) is available on 
 <a href="https://github.com/robbymckilliam/pubsim">github</a>. This software is released under the
-<a href="http://matt.might.net/articles/crapl/">CRAPL</a> and comes with no guarantee as to legibility, coding style or anything else.</td></tr>
+<a href="http://matt.might.net/articles/crapl/">CRAPL</a> and comes with no guarantee as to legibility, coding style or anything else.
+</td></tr>
 </table>
 
 <br>
