--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 	 Direction estimation by minimum squared arc length.
 	 submitted to <em>IEEE Trans. Signal Process.</em>, Mar. 2011.<br />
-	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;]
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
 
 	</td>
 	</tr>
