Added to thesis errata.

--- a/testinclude.html
+++ b/testinclude.html
@@ -1,9 +1,7 @@
 <html>
 
-</head>
-
 <frameset cols="800" frameborder="0" border="0"> 
-<frame src="index.html" scrolling="auto" 
+<frame src="http://robbymckilliam.github.com/index.html" scrolling="auto" 
 	frameborder="0">
 </frameset>
 
